--- a/Timeseries/Octopus-Electricity-Price-Predictor/eda_notebook.ipynb
+++ b/Timeseries/Octopus-Electricity-Price-Predictor/eda_notebook.ipynb
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "e2ec4f6f",
    "metadata": {},
    "outputs": [
@@ -596,28 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "25427092",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "336"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "prediction_length"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 44,
    "id": "d650d63c",
    "metadata": {},
    "outputs": [
@@ -675,28 +654,28 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2025-09-21 20:30:00</th>\n",
-       "      <td>9.67</td>\n",
+       "      <th>2024-08-28 22:00:00</th>\n",
+       "      <td>8.57</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2025-09-21 21:00:00</th>\n",
-       "      <td>9.80</td>\n",
+       "      <th>2024-08-28 22:30:00</th>\n",
+       "      <td>8.60</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2025-09-21 21:30:00</th>\n",
-       "      <td>6.80</td>\n",
+       "      <th>2024-08-28 23:00:00</th>\n",
+       "      <td>7.76</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2025-09-21 22:00:00</th>\n",
-       "      <td>8.47</td>\n",
+       "      <th>2024-08-28 23:30:00</th>\n",
+       "      <td>8.68</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2025-09-21 22:30:00</th>\n",
-       "      <td>7.64</td>\n",
+       "      <th>2024-08-29 00:00:00</th>\n",
+       "      <td>8.23</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>30234 rows × 1 columns</p>\n",
+       "<p>11567 rows × 1 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -708,23 +687,31 @@
        "2024-01-01 01:30:00                        4.08\n",
        "2024-01-01 02:00:00                        3.71\n",
        "...                                         ...\n",
-       "2025-09-21 20:30:00                        9.67\n",
-       "2025-09-21 21:00:00                        9.80\n",
-       "2025-09-21 21:30:00                        6.80\n",
-       "2025-09-21 22:00:00                        8.47\n",
-       "2025-09-21 22:30:00                        7.64\n",
+       "2024-08-28 22:00:00                        8.57\n",
+       "2024-08-28 22:30:00                        8.60\n",
+       "2024-08-28 23:00:00                        7.76\n",
+       "2024-08-28 23:30:00                        8.68\n",
+       "2024-08-29 00:00:00                        8.23\n",
        "\n",
-       "[30234 rows x 1 columns]"
+       "[11567 rows x 1 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[start_date:end_training + timedelta(days=3*prediction_length)]\n"
+    "df[start_date:end_training]\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf4f164c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
