Updated About section

--- a/Tabular/Rental-Price-Predictor-With-Model-Tuning/Notebook.ipynb
+++ b/Tabular/Rental-Price-Predictor-With-Model-Tuning/Notebook.ipynb
@@ -6,8 +6,9 @@
    "metadata": {},
    "source": [
     "# About\n",
-    "This notebook aims to train an XGBoost model to solve a regression problem. The model, if well trained, will be able to predict **monthly rental prices** for homes in Brazil given input features such as city, floor area, number of bathrooms, animals/no animals allowed, homeowners associate fee, property tax, and fire insurance. The below figure shows the predictions made, along with their residuals (predicted - actual rental price)<br>\n",
-    "![Alt text](img/residplot.png)"
+    "This notebook aims to train an XGBoost model to solve a regression problem. The model, if well trained, will be able to predict **monthly rental prices** for homes in Brazil given input features such as city, floor area, number of bathrooms, animals/no animals allowed, homeowners associate fee, property tax, and fire insurance. The below figure shows the predictions made, along with their residuals (predicted - actual rental price)<p><br>\n",
+    "A hyperparameter tuning job is executed towards the later stages of this notebook. The hyperparameter tuning jobs here aims to find an optimal set of algorithm hyperparameters that will minimise the squared error loss function.<p>\n",
+    "![Alt text](img/residplot.png)\n"
    ]
   },
   {
